# dbus-binding-rs

./: Cargo.toml
src/: crate_files.rs  dbus_common.rs  dbus_enum.rs  dbus_error.rs  dbus_interface.rs  dbus_services.rs  dbus_signal.rs  dbus_struct.rs  lib.rs  main.rs
tests/: compilation_test.rs
tests/test_app/: Cargo.toml
tests/test_app/src/: main.rs
xml/introspection-xml/: enum-Enum0.xml  enum-Enum1.xml  enum-Enum2.xml  enum-Enum3.xml  enum-Enum4.xml  enum-Enum5.xml  enum-Enum6.xml  enum-Enum7.xml  error-Error10.xml  error-Error11.xml  error-Error8.xml  error-Error9.xml  interface-SystemService.xml  service.xml  struct-Struct12.xml  struct-Struct13.xml  struct-Struct14.xml  struct-Struct15.xml  struct-Struct16.xml  struct-Struct17.xml
xml/introspection-xml-v2/: interface-SystemService2.xml  service.xml  struct-Struct19.xml
